--- a/source/_patterns/02-organisms/00-global/00-header.scss
+++ b/source/_patterns/02-organisms/00-global/00-header.scss
@@ -83,7 +83,7 @@
   }
 
   &__navigation {
-    top: 4.1em;
+    top: 68px;
     position: absolute;
     width: 100%;
     border-bottom: 0.063em solid $colorSilver;
