--- a/source/_patterns/02-organisms/00-global/02-basic-layout.scss
+++ b/source/_patterns/02-organisms/00-global/02-basic-layout.scss
@@ -27,7 +27,7 @@
   }
   @media only screen and (min-width: $breakpointDesktop) {
     .pageContent {
-      padding-top: 4.2rem;
+      padding-top: 68px;
     }
   }
   main {
